[package]
name = "solana-rpc-perf"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
tokio-stream = "0.1"
futures-util = { version = "0.3.29", features = ["io"] }
yellowstone-grpc-client = "1.6.0"
yellowstone-grpc-proto = "1.6.0"
anyhow = "1.0"
retry = "2.0"
log = "0.4.20"
env_logger = "0.10.1"
backoff = { version = "0.4.0", features = ["tokio"] }
chrono = "0.4"
clap = {version = "4.2.0", features = ["derive"]}
solana-client = { version = "1.18.26" }

solana-sdk = "1.18.26"

futures = "0.3"